# shimadzu_fnirs_converter

./: .gitignore  LICENSE  README.md  citation.cff  pyproject.toml
src/shimadzu_fnirs_converter/: __init__.py  api.py  command_interface.py  convert_functions.py
tests/: test_import.py
