[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shimadzu-fnirs-converter"
version = "0.1.0"
description = "Convert Shimadzu fNIRS TXT export to MNE Raw (.fif) and SNIRF (.snirf), with montage and events."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"

license = { text = "MIT" }

keywords = ["fNIRS", "Shimadzu", "SNIRF", "MNE", "neuroimaging"]

authors = [
  { name = "Jiaran Dong", email = "dongjiaran123456@icloud.com" },
  { name = "Jingyan Zhang", email = "zhangjingyansamaire@outlook.com" },
  { name = "Chen Feng", email = "finch_f@yeah.net" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "h5py>=3.10",
  "mne>=1.10"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
  "mypy",
  "build",
  "twine"
]

[project.urls]
Homepage = "https://github.com/Aria031/shimadzu-fnirs-converter"
Repository = "https://github.com/Aria031/shimadzu-fnirs-converter"
Issues = "https://github.com/Aria031/shimadzu-fnirs-converter/issues"

[project.scripts]
shimadzu-fnirs-converter = "shimadzu_fnirs_converter.command_interface:main"
shimadzu2snirf = "shimadzu_fnirs_converter.command_interface:main"
shimadzu_fnirs_converter = "shimadzu_fnirs_converter.command_interface:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
